
---------------[ xxxx-xx-xx : 0.4.0 ]---------------

2004-12-10  Erik Grinaker <erikg@codepoet.no>

	* rewrote the application code, as well as the dialog and u
	modules

	* the entry clipboard is shared between revelation instances

	* wrote unit tests for new clipboard classes, and updated unit
	tests for config module

	* added a mimetype and icon for Revelation data files

2004-11-26  Erik Grinaker <erikg@codepoet.no>

	* rewrote the data module

	* wrote unit tests for the data module

	* moved build-time variables to config module

2004-11-23  Erik Grinaker <erikg@codepoet.no>

	* split configuration handling into a separate module

	* wrote unit tests for the config module

2004-11-19  Erik Grinaker <erikg@codepoet.no>

	* cleaned up the entry module API

	* added unit tests for the entry module

	* moved parse_subst() from misc module to util module

	* added unit tests for parse_subst()

	* removed the misc module

2004-11-03  Erik Grinaker <erikg@codepoet.no>

	* rewrote the FPM data handler

	* added Makefile target for unit tests

2004-10-30  Erik Grinaker <erikg@codepoet.no>

	* rewrote the Revelation and RevelationXML data handlers

	* changed the data handler API

	* added unit tests for the Revelation and RevelationXML
	data handlers

2004-10-23  Erik Grinaker <erikg@codepoet.no>

	* added util module, moved alot of code to it, and rewrote
	the code

	* added unit tests for util module

2004-10-22  Erik Grinaker <erikg@codepoet.no>

	* rewrote file handling to use gnome-vfs

	* added unit tests for io module

	* added unit tests for datahandler module

2004-09-18  Erik Grinaker <erikg@codepoet.no>

	* added ellpisis to menu items

	* changed the popular value threshold to 3

2004-09-17  Erik Grinaker <erikg@codepoet.no>

	* prepend the current account username to the username dropdown

	* activate searchbar button when hitting return in the entry

	* syncronize searchbar entry text with the entry searcher
